# dx_tailwind

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  gulpfile.js  package.json
assets/: main.min.css  tailwind.min.css
src/: main.rs
src/route/: mod.rs  route.rs
src/shared/: mod.rs
src/shared/components/: mod.rs
src/shared/components/home/: echo.rs  hero.rs  mod.rs
src/shared/components/layout/: aside.rs  header.rs  main.rs  mod.rs
src/views/: mod.rs
src/views/blog/: blog.rs
src/views/home/: home.rs
styles/: main.scss  tailwind.css
